# BlurDetection2

./: process.py  pyproject.toml
blur_detection/: detection.py
