[tool]
[tool.pdm]

[project]
name = "BlurDetection2"
version = ""
description = "Blur Detection with OpenCV in Python"
authors = [
    {name = "Will Brennan", email = "WillBrennan@users.noreply.github.com"},
]
dependencies = ["numpy", "opencv-python"]
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
